--- a/templates/common/xfce4-terminalrc.j2
+++ b/templates/common/xfce4-terminalrc.j2
@@ -1,5 +1,4 @@
 [Configuration]
-ColorForeground=#dcdcdc
 MiscAlwaysShowTabs=FALSE
 MiscBell=FALSE
 MiscBordersDefault=TRUE
@@ -16,9 +15,11 @@ MiscTabCloseButtons=TRUE
 MiscTabCloseMiddleClick=TRUE
 MiscTabPosition=GTK_POS_TOP
 MiscHighlightUrls=TRUE
-ColorBackground=#45fa314247f5
-ColorPalette=#3f3f3f3f3f3f;#e640414725d4;#407fd7b38c1a;#ffffff9d6f7b;#4770b42657ea;#dcdc8c8cc3c3;#8c8cd0d0d3d3;#dcdcdcdcdcdc;#707090908080;#f53c2dab1617;#70699c718634;#f0f0dfdfafaf;#9494bfbff3f3;#ecec9393d3d3;#9393e0e0e3e3;#ffffffffffff
+ColorForeground=#dcdcdc
+ColorBackground=#2105221436d4
 ColorCursor=#dcdcdc
+ColorPalette=#3f3f3f3f3f3f;#ffff24543d06;#6060b4b48a8a;#ffff734b2d9d;#2743bb04dbdc;#ecec9393d3d3;#8c8cd0d0d3d3;#dcdcdcdcdcdc;#707090908080;#c162ffff5a95;#7272d5d5a3a3;#f0f0dfdfafaf;#9494bfbff3f3;#cd6000009368;#9393e0e0e3e3;#ffffffffffff
+ColorBold=#eb5099935684
+ColorSelection=#f6a1d7d1d7d1
 ColorBoldUseDefault=FALSE
-ColorBold=#bb90d6992430
-TabActivityColor=#aaaa00000000
+
